# music

./: .gitignore  .music.py.swo  music  music.py  pyproject.toml  requirements.txt  x.bash  x.bat
tools/: watch.py
