[tool.black]
line_length = 120

[tool.mypy]
pretty = true
show_error_context = true
strict = true

[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["lucruum <naoh432@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
ffpb = "^0.4.1"
free-proxy = "^1.1.1"
mutagen = "^1.46.0"
python-youtube = "^0.9.0"
pytube = "^15.0.0"
requests = "^2.31.0"
tqdm = "^4.65.0"
vk-api = "^11.9.9"
yandex-music = "^2.1.1"
ytmusicapi = "^1.0.2"
types-beautifulsoup4 = "^4.12.0.5"
types-colorama = "^0.4.15.11"
types-requests = "^2.31.0.0"
types-tqdm = "^4.65.0.1"
types-ujson = "^5.7.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
